fix gap degli element della vetrina

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 
-    padding: 0 10px;
+    /* padding: 0 10px; */
 }
 
 ul.row, .icon.row{
@@ -93,12 +93,11 @@ nav .container .categoria a:hover{
 /* vetrina */
 .vetrina.row{
     flex-wrap: wrap;
-    /* gap:20px; */
+    gap:20px;
 }
 
 .element{
-    width: calc(100% / 3);
-    padding: 10px;
+    width: calc(100% / 3 - 20px / 3 * 2);
 }
 
 .vet-img{
